Fixed Chrome bug that forgot the footer was fixed. Worked on iPhone X screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ body { background-color: #e9e9e9; }
     }
 }
 
-@media only screen and (min-device-width: 1025px) {
+@media only screen and (min-device-width: 1024px) {
     #main {
         display: flex;
         align-items: flex-start;
@@ -102,8 +102,8 @@ body { background-color: #e9e9e9; }
     }
 }
 
-/* Large Mobile Devices and Desktops */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+/* Large Mobile Devices  */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1023px) and (min-device-height: 768px) {
     #footer_info {
         display: flex;
         flex-direction: row;
@@ -148,7 +148,7 @@ body { background-color: #e9e9e9; }
 }
 
 /* Small Mobile Devices */
-@media only screen and (max-device-width: 767px) {
+@media only screen and (max-device-width: 812px) and (max-device-height: 767px) {
     #footer_info {
         display: none;
     }
@@ -216,6 +216,10 @@ body { background-color: #e9e9e9; }
     }
 
     #btnReport {
+        display: none;
+    }
+
+    #btnToday {
         display: none;
     }
 }
